# llms

./: Fine_tuning_llama2_alpaca_datasets.ipynb  README.md  dataset_analysis.ipynb
notebook/: testing_dataset.json  training_dataset.json
notebook_qa/: README.md  financial-qa.ipynb
qa_dataset/: Makefile  dataset_alpaca_sft.ipynb  dataset_fingpt_sft.ipynb  embed_data.py
qa_dataset/data/: testing_dataset.json  training_dataset.json
streaming_pipeline/: .env.example  Makefile  README.md  logging.yaml  pyproject.toml
streaming_pipeline/deploy/: Dockerfile  entrypoint.sh
streaming_pipeline/streaming_pipeline/: __init__.py  alpaca_batch.py  alpaca_stream.py  embeddings.py  flow.py  models.py  qdrant.py  utils.py
streaming_pipeline/tools/: run_batch.py  run_stream.py  search.py
training_pipeline/: .env.example  README.md  inference_run.py  makefile  pyproject.toml  train.py
training_pipeline/configs/: inference_config.yaml  training_config_sft.yaml
training_pipeline/tools/: inference_run.py  train.py
training_pipeline/training_pipeline/: __init__.py  configs.py  constants.py  metrics.py  models.py  utils.py
training_pipeline/training_pipeline/api/: __init__.py  inference.py  trainer.py  training.py
training_pipeline/training_pipeline/configs/: training_config_dpo.yaml  training_config_sft.yaml
training_pipeline/training_pipeline/data/: qa.py  utils.py
training_pipeline/training_pipeline/prompt_templates/: prompt.py
